WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309136
REGRESSION(
307567@main
): many tests in imported/w3c/web-platform-tests/webvtt time out
https://bugs.webkit.org/show_bug.cgi?id=309136
Summary
REGRESSION(307567@main): many tests in imported/w3c/web-platform-tests/webvtt...
Andy Estes
Reported
2026-03-03 18:17:22 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2026-03-03 18:17:23 PST
<
rdar://problem/171659558
>
Andy Estes
Comment 2
2026-03-03 18:37:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59860
EWS
Comment 3
2026-03-04 11:13:11 PST
Committed
308646@main
(06bdf1c6610d): <
https://commits.webkit.org/308646@main
> Reviewed commits have been landed. Closing PR #59860 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug